@@ -1282,7 +1282,7 @@ sub delete_ignorable_whitespace {
         # thru this sibling list.  I doubt it actually matters, tho.
         next;
       }
-      next unless $sibs->[$i] =~ m<^\s+$>s; # it's /all/ whitespace
+      next if $sibs->[$i] =~ m<[^\n\r\f\t ]>s; # it's /all/ whitespace
 
       print "Under $ptag whose canTighten ",
           "value is ", 0 + $HTML::Element::canTighten{$ptag}, ".\n"
@@ -1559,7 +1559,7 @@ sub as_HTML {
             push @html, $node; # say no go
           } else {
             if($last_tag_tightenable) {
-              $node =~ s<\s+>< >s;
+              $node =~ s<[\n\r\f\t ]+>< >s;
               #$node =~ s< $><>s;
               $node =~ s<^ ><>s;
               push
@@ -1661,9 +1661,9 @@ sub as_text {
 
 sub as_trimmed_text {
   my $text = shift->as_text(@_);
-  $text =~ s/\s+$//s;
-  $text =~ s/^\s+//s;
-  $text =~ s/\s+/ /g;
+  $text =~ s/[\n\r\f\t ]+$//s;
+  $text =~ s/^[\n\r\f\t ]+//s;
+  $text =~ s/[\n\r\f\t ]+/ /g;
   return $text;
 }
 
