@@ -4,6 +4,8 @@ NEXT RELEASE
     [FIXES]
     * Updated HTML::Parser requirement to 3.46 to fix a bug in
       tag-rendering.t, noted in RT 20816.  Thanks to Gordon Lack.
+    * Fixed HTML::TreeBuilder to not remove &nbsp; where it shouldn't,
+      using patch supplied in RT 17481.  Thanks to Chris Madsen.
 
 3.20    Sun Jun  4 22:24:38 CDT 2006
     No code changes.  Just making sure all notes go to Andy Lester,
